--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	
 	<body>
-		<h1>hellooooo test test test 1 23 do you work Yes? Or no?</h1>
+		<h1>Riachu's Great Page! (it's a wip)</h1>
+		<button>teeest</button>
 	</body>
 </html>
