made it even better

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
+		<link rel="icon" href="assets/icon.png">
+		<title>Riachu's Awesome Page</title>
 	</head>
 	
 	<body>
-		<h1>Riachu's Great Page! (it's a wip)</h1>
-		<button>teeest</button>
+		<div id="header">
+			<h1>Riachu's Awesome Page! (it's a wip)</h1>
+			
+			<div id="scroller">
+				<marquee behavior="scroll" direction="left">hello im riachu uhh yeah this website is a wip soo uhh good job finding or something lol anyways do you like object shows my favorite object show is bfdia uhh yeah i also draw and animate and stuff and i guess i code as well as shown with this website but i wouldn't really call it a main trait you know</marquee>
+			</div>
+
+			<div id="spinningbaldo">
+				<img src="assets/icon.png" style="width: 10%; height: 10%;">
+			</div>
+			
+			<div class="button-container">
+				<button>teeest</button>
+			</div>
+		</div>
 	</body>
 </html>
